# Atuin-Engine

./: .gitignore  CMakeLists.txt  README.md
AtuinEngine/: App.cpp  App.h  Application.cpp  Application.h  CMakeLists.txt  EngineLoop.cpp  EngineLoop.h  config.ini  main.cpp
AtuinEngine/Core/: CMakeLists.txt
AtuinEngine/Core/Config/: CMakeLists.txt  CVar.h  ConfigManager.cpp  ConfigManager.h  ICVar.h
AtuinEngine/Core/DataStructures/: Array.cpp  Array.h  CMakeLists.txt  ConcurrentQueue.cpp  ConcurrentQueue.h  Json.cpp  Json.h  Map.cpp  Map.h  PriorityQueue.cpp  PriorityQueue.h  Queue.cpp  Queue.h
AtuinEngine/Core/Debug/: CMakeLists.txt  Definitions.cpp  Definitions.h  Log.cpp  Log.h  Logger.cpp  Logger.h
AtuinEngine/Core/Files/: CMakeLists.txt  FileManager.cpp  FileManager.h  Files.cpp  Files.h
AtuinEngine/Core/Jobs/: CMakeLists.txt  JobManager.cpp  JobManager.h  Jobmanager.cpp  Jobs.cpp  Jobs.h
AtuinEngine/Core/Memory/: CMakeLists.txt  FreeListAllocator.cpp  FreeListAllocator.h  FreeTreeAllocator.cpp  FreeTreeAllocator.h  IAllocator.cpp  IAllocator.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
AtuinEngine/Core/Time/: CMakeLists.txt  Clock.cpp  Clock.h
AtuinEngine/Core/Util/: CMakeLists.txt  Math.cpp  Math.h  StringFormat.h  StringID.h  Types.h
AtuinEngine/Graphics/: CMakeLists.txt  MeshComponent.cpp  MeshComponent.h  RenderModule.cpp  RenderModule.h  Window.h  WindowModule.cpp  WindowModule.h
AtuinEngine/Graphics/Renderer/: CMakeLists.txt  Camera.cpp  Camera.h  Definitions.h  Descriptors.cpp  Descriptors.h  JsonToVulkan.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshPass.cpp  MeshPass.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  RendererCore.cpp  RendererCore.h  Renderpass.cpp  Renderpass.h  ResourceManager.cpp  ResourceManager.h  SamplerSettings.h  VulkanInclude.h
AtuinEngine/Input/: CMakeLists.txt  GLFWInput.h  InputContext.h  InputModule.cpp  InputModule.h  InputSignals.cpp  InputSignals.h  KeyBinding.cpp  KeyBinding.h  KeyCodes.h  KeysBinding.h  RangeConverter.h
AtuinEngine/Scene/: CMakeLists.txt  Component.cpp  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
Resources/: input_contexts.json  input_ranges.json
Resources/Materials/Rubber_Hose/: rubber_hose.material.json
Resources/Materials/Rusted_Iron/: rusted_iron.material.json
Resources/Pipelines/: TEMPLATE.pipeline.json  debug_.view_culling.pipeline.json  default_fullscreen_texture.pipeline.json  default_pbr_material.pipeline.json  default_pbr_material_transparent.pipeline.json  default_shadow.pipeline.json  depth_reduce.pipeline.json  shadow_culling.pipeline.json  view_culling.pipeline.json
Resources/Samplers/: TEMPLATE.sampler.json  default_blocky.sampler.json  default_depth.sampler.json  default_pbr.sampler.json  default_shadow.sampler.json  default_smooth.sampler.json
Resources/Scenes/: test.scene.json
Resources/Shaders/: batched_meshes.vert  batched_meshes_vert.spv  culling_comp.spv  debug_view_culling.comp  debug_view_culling_comp.spv  depth_reduce.comp  depth_reduce_comp.spv  fullscreen_quad.vert  fullscreen_quad_vert.spv  fullscreen_texture.frag  fullscreen_texture_frag.spv  geometry_pass.frag  geometry_pass.vert  shadow.vert  shadow_culling.comp  shadow_culling_comp.spv  shadow_vert.spv  single_material.frag  single_material_frag.spv  single_material_pbr.frag  single_material_pbr_frag.spv  single_material_pbr_transparent.frag  single_material_pbr_transparent_frag.spv  view_culling.comp  view_culling_comp.spv
Scripts/: compile_shaders.sh  configure_debug.sh  configure_release.sh  run_debug.sh  run_release.sh  test_debug.sh  test_release.sh
Test/: CMakeLists.txt
Test/Core/: CMakeLists.txt
Test/Core/DataStructures/: CMakeLists.txt  TestArray.cpp  TestMap.cpp  TestPriorityQueue.cpp  TestQueue.cpp
Test/Core/Util/: CMakeLists.txt  TestMath.cpp
