
add_library( Renderer 
    Renderer.cpp
    RendererCore.cpp  
    MeshPass.cpp 
    Mesh.cpp 
    Material.cpp 
    Descriptors.cpp 
    ResourceManager.cpp 
    Renderer.h 
    RendererCore.h
    MeshPass.h  
    Mesh.h 
    Material.h 
    Descriptors.h
    ResourceManager.h 
    SamplerSettings.h
)