
add_library( Renderer 
    Renderer.cpp
    RendererCore.cpp  
    MeshPass.cpp 
    Mesh.cpp 
    Material.cpp 
    Descriptors.cpp 
    Pipeline.cpp 
    ResourceManager.cpp 
    Camera.cpp 
    VulkanInclude.h 
    Renderer.h 
    RendererCore.h
    MeshPass.h  
    Mesh.h 
    Material.h 
    Descriptors.h 
    Pipeline.h 
    ResourceManager.h
    Camera.h 
    JsonToVulkan.h
)